--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,38 @@
+html {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+}
 
+a {
+  text-decoration: none;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px 20px;
+}
+
+.header img {
+  height: 65px;
+}
+
+.header ul {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  list-style: none;
+}
+
+.header a {
+  color: red;
+  font-size: 24px;
+}
+
+.active {
+  text-decoration: underline;
+}
 
 /*# sourceMappingURL=main.css.map */
