--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,36 +3,108 @@ html {
   font-weight: 500;
 }
 
+body {
+  margin: 30px 50px;
+}
+@media screen and (max-width: 768px) {
+  body {
+    margin: 10px;
+  }
+}
+
 a {
   text-decoration: none;
 }
 
-.header {
+header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 30px 20px;
+  margin-bottom: 30px;
 }
 
-.header img {
+header img {
   height: 65px;
 }
+@media screen and (max-width: 768px) {
+  header img {
+    height: 45px;
+  }
+}
 
-.header ul {
+header ul {
   display: flex;
   flex-direction: row;
   gap: 30px;
   list-style: none;
 }
+@media screen and (max-width: 768px) {
+  header ul {
+    gap: 10px;
+  }
+}
 
-.header a {
-  color: red;
+header a {
+  color: #FF6060;
   font-size: 24px;
+}
+@media screen and (max-width: 768px) {
+  header a {
+    font-size: 12px;
+  }
 }
 
 .active {
   text-decoration: underline;
+}
+
+.banner {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  height: 223px;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+}
+@media screen and (max-width: 768px) {
+  .banner {
+    height: 111px;
+    border-radius: 10px;
+  }
+}
+.banner h1 {
+  color: #ffffff;
+  font-size: 48px;
+  font-weight: 500;
+}
+@media screen and (max-width: 768px) {
+  .banner h1 {
+    font-size: 24px;
+  }
+}
+.banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 1;
+  border-radius: 25px;
+}
+@media screen and (max-width: 768px) {
+  .banner::before {
+    border-radius: 10px;
+  }
+}
+.banner > * {
+  position: relative;
+  z-index: 2;
 }
 
 /*# sourceMappingURL=main.css.map */
