--- a/src/styles/sass/layout/_header.scss
+++ b/src/styles/sass/layout/_header.scss
@@ -1,25 +1,35 @@
-.header{
+header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 30px 20px;
+    margin-bottom: 30px;
 }
 
-.header img{
+header img{
     height: 65px;
+    @include mobile{
+        height: 45px;
+    }
 }
 
-.header ul{
+header ul{
     display: flex;
     flex-direction: row;
     gap: 30px;
     list-style: none;
+    @include mobile{
+        gap: 10px;
+    }
+
 }
 
-.header a{
+header a{
     color: $primary-color;
     font-size: 24px;
+    @include mobile{
+        font-size: 12px;
+    }
 }
 
 .active{
