--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,59 +4,97 @@ html {
 }
 
 body {
-  margin: 30px 50px;
-}
-@media screen and (max-width: 768px) {
-  body {
-    margin: 10px;
-  }
+  margin: 0;
 }
 
 a {
   text-decoration: none;
 }
 
-header {
+main {
+  margin-inline: 50px;
+}
+@media screen and (max-width: 768px) {
+  main {
+    margin-inline: 20px;
+  }
+}
+
+.header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 30px;
+  margin: 30px 50px;
 }
-
-header img {
+@media screen and (max-width: 768px) {
+  .header {
+    margin: 10px 20px 20px 20px;
+  }
+}
+.header__logo {
   height: 65px;
 }
 @media screen and (max-width: 768px) {
-  header img {
+  .header__logo {
     height: 45px;
   }
 }
-
-header ul {
+.header__nav-list {
   display: flex;
   flex-direction: row;
   gap: 30px;
   list-style: none;
 }
 @media screen and (max-width: 768px) {
-  header ul {
+  .header__nav-list {
     gap: 10px;
   }
 }
-
-header a {
+.header__nav-link {
   color: #FF6060;
   font-size: 24px;
 }
 @media screen and (max-width: 768px) {
-  header a {
+  .header__nav-link {
     font-size: 12px;
   }
 }
-
-.active {
+.header__nav-link--active {
   text-decoration: underline;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  height: 209px;
+}
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 0 120px;
+  }
+}
+.footer__logo {
+  height: 39px;
+  margin: 30px 0;
+}
+@media screen and (max-width: 768px) {
+  .footer__logo {
+    margin: 0;
+  }
+}
+.footer__text {
+  text-align: center;
+  font-size: 24px;
+  color: #ffffff;
+}
+@media screen and (max-width: 768px) {
+  .footer__text {
+    font-size: 12px;
+  }
 }
 
 .banner {
@@ -74,15 +112,21 @@ header a {
   .banner {
     height: 111px;
     border-radius: 10px;
+    justify-content: left;
+    padding-right: 90px;
   }
 }
-.banner h1 {
+.banner__content {
+  position: relative;
+  z-index: 2;
+}
+.banner__content h1 {
   color: #ffffff;
   font-size: 48px;
   font-weight: 500;
 }
 @media screen and (max-width: 768px) {
-  .banner h1 {
+  .banner__content h1 {
     font-size: 24px;
   }
 }
@@ -101,10 +145,6 @@ header a {
   .banner::before {
     border-radius: 10px;
   }
-}
-.banner > * {
-  position: relative;
-  z-index: 2;
 }
 
 /*# sourceMappingURL=main.css.map */
