--- a/src/styles/sass/components/_banner.scss
+++ b/src/styles/sass/components/_banner.scss
@@ -8,21 +8,27 @@
     justify-content: center;
     align-items: center;
     padding: 0 20px;
-    @include mobile{
+    @include mobile {
         height: 111px;
         border-radius: 10px;
+        justify-content: left;
+        padding-right: 90px;
     }
 
-    h1{
-        color: $text-color;
-        font-size: 48px;
-        font-weight: 500;
-        @include mobile{
-            font-size: 24px;
+    &__content {
+        position: relative;
+        z-index: 2;
+        h1 {
+            color: $text-color;
+            font-size: 48px;
+            font-weight: 500;
+            @include mobile {
+                font-size: 24px;
+                
+            }
         }
     }
 
-    // Pseudo-élément pour le voile d'opacité
     &::before {
         content: '';
         position: absolute;
@@ -30,16 +36,11 @@
         right: 0;
         bottom: 0;
         left: 0;
-        background: rgba(0, 0, 0, 0.3); 
+        background: rgba(0, 0, 0, 0.3);
         z-index: 1;
         border-radius: 25px;
-        @include mobile{
+        @include mobile {
             border-radius: 10px;
         }
-    }
-
-    & > * {
-        position: relative;
-        z-index: 2;
     }
 }
