--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -4,5 +4,6 @@
 @import "../sass/base/base";
 
 @import "../sass/layout/header";
+@import "../sass/layout/footer";
 
 @import "../sass/components/banner";
