--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -97,6 +97,47 @@ main {
   }
 }
 
+.notFoundContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #FF6060;
+  margin: 100px 0;
+  gap: 50px;
+}
+.notFoundContainer__number {
+  font-weight: 700;
+  font-size: 288px;
+  margin: 0;
+  margin-bottom: 50px;
+}
+@media screen and (max-width: 768px) {
+  .notFoundContainer__number {
+    font-size: 96px;
+  }
+}
+.notFoundContainer__text {
+  font-size: 36px;
+  margin: 0;
+  text-align: center;
+}
+@media screen and (max-width: 768px) {
+  .notFoundContainer__text {
+    font-size: 18px;
+  }
+}
+.notFoundContainer__link {
+  color: #FF6060;
+  text-decoration: underline;
+  font-size: 18px;
+}
+@media screen and (max-width: 768px) {
+  .notFoundContainer__link {
+    font-size: 14px;
+  }
+}
+
 .banner {
   position: relative;
   background-size: cover;
