--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -6,4 +6,6 @@
 @import "../sass/layout/header";
 @import "../sass/layout/footer";
 
+@import "../sass/pages/notFound";
+
 @import "../sass/components/banner";
