--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -9,3 +9,5 @@
 @import "../sass/pages/notFound";
 
 @import "../sass/components/banner";
+@import "../sass/components/card";
+@import "../sass/components/gallery";
