--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,11 @@ main {
     margin-inline: 20px;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  main {
+    margin-inline: 5px;
+  }
+}
 
 .header {
   display: flex;
@@ -26,6 +31,11 @@ main {
   justify-content: space-between;
   align-items: center;
   margin: 30px 50px;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .header {
+    margin: 10px 20px 20px 20px;
+  }
 }
 @media screen and (max-width: 768px) {
   .header {
@@ -149,6 +159,11 @@ main {
   align-items: center;
   padding: 0 20px;
 }
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .banner {
+    height: 160px;
+  }
+}
 @media screen and (max-width: 768px) {
   .banner {
     height: 111px;
@@ -185,6 +200,55 @@ main {
 @media screen and (max-width: 768px) {
   .banner::before {
     border-radius: 10px;
+  }
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  height: 340px;
+}
+@media screen and (max-width: 768px) {
+  .card {
+    height: 255px;
+  }
+}
+.card img {
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  height: 100%;
+}
+.card h2 {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.gallery {
+  background-color: #F6F6F6;
+  margin: 30px 0;
+  padding: 40px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 768px) {
+  .gallery {
+    grid-template-columns: 1fr;
+    padding: 0;
+    background-color: none;
   }
 }
 
