--- a/src/styles/sass/layout/_header.scss
+++ b/src/styles/sass/layout/_header.scss
@@ -4,6 +4,9 @@
     justify-content: space-between;
     align-items: center;
     margin: 30px 50px;
+    @include tablet{
+        margin: 10px 20px 20px 20px;
+    }
     @include mobile{
         margin: 10px 20px 20px 20px;
     }
