--- a/src/styles/sass/utils/_mixins.scss
+++ b/src/styles/sass/utils/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin tablet{
-    @media screen and (max-width: map-get($breakpoints, tablet)) {
+    @media screen and (min-width: map-get($breakpoints, mobile)) and (max-width: map-get($breakpoints, tablet)) {
         @content;
     }
 }
