--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -6,8 +6,10 @@
 @import "../sass/layout/header";
 @import "../sass/layout/footer";
 
+@import "../sass/pages/about";
 @import "../sass/pages/notFound";
 
 @import "../sass/components/banner";
 @import "../sass/components/card";
 @import "../sass/components/gallery";
+@import "../sass/components/collapse";
