Lodging page and slideshow first draft

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -13,3 +13,4 @@
 @import "../sass/components/card";
 @import "../sass/components/gallery";
 @import "../sass/components/collapse";
+@import "../sass/components/slideshow";
