--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -228,6 +228,7 @@ main {
   border-radius: 10px;
   object-fit: cover;
   height: 100%;
+  filter: brightness(0.7);
 }
 .card h2 {
   position: absolute;
@@ -304,6 +305,47 @@ main {
   opacity: 1;
   padding: 15px;
   transform: scaleY(1);
+}
+
+.slideshow {
+  position: relative;
+  width: 100%;
+  height: 415px;
+}
+@media screen and (max-width: 768px) {
+  .slideshow {
+    height: 335px;
+  }
+}
+.slideshow__cover {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  filter: brightness(0.9);
+}
+.slideshow .arrowLeft, .slideshow .arrowRight {
+  position: absolute;
+  cursor: pointer;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 80px;
+  width: 47px;
+}
+.slideshow .arrowLeft {
+  left: 20px;
+}
+.slideshow .arrowRight {
+  right: 20px;
+}
+.slideshow .numbering {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
+  font-weight: 500;
+  font-size: 24px;
 }
 
 /*# sourceMappingURL=main.css.map */
