--- a/src/styles/sass/components/_card.scss
+++ b/src/styles/sass/components/_card.scss
@@ -13,6 +13,7 @@
         border-radius: 10px;
         object-fit: cover;
         height: 100%;
+        filter:brightness(0.7)
     }
     
     h2 {
