Tags and Host components first draft

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -8,9 +8,12 @@
 
 @import "../sass/pages/about";
 @import "../sass/pages/notFound";
+@import "../sass/pages/lodgingPage";
 
 @import "../sass/components/banner";
 @import "../sass/components/card";
 @import "../sass/components/gallery";
 @import "../sass/components/collapse";
 @import "../sass/components/slideshow";
+@import "../sass/components/tag";
+@import "../sass/components/host";
