--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -156,6 +156,54 @@ main {
   }
 }
 
+.lodging-page {
+  display: flex;
+  flex-direction: column;
+}
+
+.lodging-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 30px 0;
+}
+@media screen and (max-width: 768px) {
+  .lodging-info {
+    flex-direction: column;
+  }
+}
+.lodging-info__title {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.lodging-info__title h1 {
+  color: #FF6060;
+  margin: 0;
+  font-weight: 500;
+  font-size: 36px;
+}
+@media screen and (max-width: 768px) {
+  .lodging-info__title h1 {
+    font-size: 18px;
+  }
+}
+.lodging-info__title--location {
+  color: #FF6060;
+  margin: 0;
+  font-size: 18px;
+}
+@media screen and (max-width: 768px) {
+  .lodging-info__title--location {
+    font-size: 14px;
+  }
+}
+.lodging-info__title--tags {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
 .banner {
   position: relative;
   background-size: cover;
@@ -346,6 +394,56 @@ main {
   color: white;
   font-weight: 500;
   font-size: 24px;
+}
+
+.tag {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: #FF6060;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 10px;
+}
+.tag p {
+  margin: 0;
+  text-align: center;
+  font-size: 14px;
+}
+@media screen and (max-width: 768px) {
+  .tag p {
+    font-size: 10px;
+  }
+}
+
+.host {
+  display: flex;
+  align-items: center;
+}
+.host__name {
+  margin-right: 20px;
+}
+.host__name p {
+  margin: 0;
+  color: #FF6060;
+  font-size: 18px;
+}
+@media screen and (max-width: 768px) {
+  .host__name p {
+    font-size: 12px;
+  }
+}
+.host__picture {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+@media screen and (max-width: 768px) {
+  .host__picture {
+    width: 32px;
+    height: 32px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
