--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -17,3 +17,4 @@
 @import "../sass/components/slideshow";
 @import "../sass/components/tag";
 @import "../sass/components/host";
+@import "../sass/components/rating";
