--- a/src/styles/sass/pages/_lodgingPage.scss
+++ b/src/styles/sass/pages/_lodgingPage.scss
@@ -49,6 +49,7 @@
         gap: 20px;
         @include mobile{
             flex-direction: row-reverse;
+            justify-content: space-between;
         }
     }
 }
@@ -59,5 +60,13 @@
     gap: 5%;
     @include mobile{
         flex-direction: column;
+    }
+
+    &__container{
+        width: 100%;
+    }
+
+    p{
+        margin: 0;
     }
 }
