--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -1,6 +1,7 @@
 html{
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    min-width: 320px;
 }
 
 body{
@@ -13,11 +14,11 @@ a{
 
 
 main{
-    margin-inline: 50px;
+    margin-inline: 7%;
     @include mobile{
         margin-inline: 20px;
     }
     @include tablet{
-        margin-inline: 5px;
+        margin-inline: 15px;
     }
 }
