--- a/src/styles/sass/components/_collapse.scss
+++ b/src/styles/sass/components/_collapse.scss
@@ -1,6 +1,5 @@
 .collapse {
     width: 100%;
-    margin-bottom: 20px;
     border-radius: 5px;
     overflow: hidden;
 
@@ -16,11 +15,15 @@
         background-color: $primary-color;
         cursor: pointer;
         
+        
         h2 {
             margin: 0;
-            font-size: 16px;
+            font-size: 18px;
             color: white;
             font-weight: 500;
+            @include mobile{
+                font-size: 13px;
+            }
         }
 
         img {
@@ -41,7 +44,7 @@
         background-color: $background-color;
         color: $primary-color;
         border-bottom-left-radius: 5px; 
-        border-bottom-right-radius:5px;
+        border-bottom-right-radius: 5px;
         max-height: 0;
         transition: max-height 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
     }
