--- a/src/styles/sass/pages/_about.scss
+++ b/src/styles/sass/pages/_about.scss
@@ -1,7 +1,13 @@
 .about__container{
     display: flex;
     flex-direction: column;
-    margin: auto;
-    margin-top: 50px;
-    width: 80%;
+    margin: 30px auto;
+    gap: 20px;
+    width: 85%;
+    @include tablet{
+        width: 90%;
+    }
+    @include mobile{
+        width: 100%;
+    }
 }
