--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -320,7 +320,7 @@ main {
   flex-direction: column;
   align-items: center;
   position: relative;
-  height: 340px;
+  aspect-ratio: 1/1;
 }
 @media screen and (max-width: 768px) {
   .card {
